finish upload and docker-compose

--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "argon2": "^0.43.1",
     "bcrypt": "^6.0.0",
     "class-validator": "^0.14.2",
+    "cloudinary": "^2.7.0",
     "mysql2": "^3.14.3",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "redis": "^4.7.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.25"
