--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bcrypt": "^6.0.0",
     "class-validator": "^0.14.2",
     "cloudinary": "^2.7.0",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.3",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
@@ -57,6 +58,7 @@
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
